fixed overflow when you open the navbar

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,6 +4,8 @@
 }
 html {
 	font-size: 62.5%;
+	overflow: scroll !important;
+	padding-right: initial !important;
 }
 
 html,
